--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,26 @@
   <body>
     <header class="row">
       <div class="col-3">
-        LOGO
-      </div>
-      <div class="col-4">
+        <div class="circle">
+          <br />
+          Be a
+          <br />
+          Manager,
+          <br />
+          Lemon
+        </div>
+     </div>
+    </div>
+    <div class="col-4 slogan">
         Teaching you how to talk like a CEO since 2018
       </div>
-      <div class="col-5">
+      <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
+
+   <hr />
 
     <br class="clear" />
 
