--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -66,3 +66,15 @@ h2 {
   font-family: 'alex_brushregular', cursive;
   
 }
+
+.next-quote {
+  color: #BA0719;
+  font-family: 'Slabo 27px', serif;
+}
+
+.footer-blurb {
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  font-style: italic;
+  text-align: right;
+  font-size: 10px;
+}
