--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <body>
     <header class="row">
       <div class="col-3">
+        <%= link_to root_path, class: 'logo' do %>
         <div class="circle">
           <br />
           Be a
@@ -18,6 +19,7 @@
           Manager,
           <br />
           Lemon
+          <% end %>
         </div>
      </div>
     </div>
@@ -25,8 +27,8 @@
         Teaching you how to talk like a CEO since 2018
       </div>
       <div class="col-5 links">
-        <%= link_to 'Contribute', '#' %>
-        <%= link_to 'About', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
+        <%= link_to 'About', '#'%>
       </div>
     </header>
 
@@ -43,7 +45,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-          <%= link_to "This isn't enough, I need more", "#", class:'next-quote' %>
+          <%= link_to "This isn't enough, I need more", root_path, class:'next-quote' %>
         </div>
         <div class="col-6 footer-blurb">
           Created in Seattle, WA by <a href="http://tinalee.getforge.io/"> Tina Lee</a><br />
