Added and styled  About page

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -67,6 +67,10 @@ h2 {
   
 }
 
+.about {
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+}
+
 .next-quote {
   color: #BA0719;
   font-family: 'Slabo 27px', serif;
