Added modal quote submit form

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -15,7 +15,7 @@
     <h2 class="text-center">Tina Lee</h2>
     <br />
     <p>
-      Tina Lee is a web developer, graphic designer, and freelance artist. She finds talking about herself in the third person awkward, but is working on it.  She previously worked in tailored menswear and looks fantastic in a three piece suit. 
+      Tina Lee is a web developer, graphic designer, and freelance artist. She finds talking about herself in the third person awkward, but is working on it.  She previously worked in the tailored menswear industry, looks fantastic in a three piece suit, and loves to help people out with their personal style. 
     </p>       
     </div>
   </div>
