--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,14 @@
         </div>
      </div>
     </div>
-    <div class="col-4 slogan">
-        Teaching you how to talk like a CEO since 2018
+    <div class="col col-sm-4 hidden-xs-down slogan">
+        Absurdly and sagely managerial since 2018
       </div>
-      <div class="col-5 links">
+      <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
+
+        <!--Button trigger modal -->
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
-        
+        &nbsp;&nbsp;
         <%= link_to 'About', about_path %>
       </div>
     </header>
@@ -46,8 +48,9 @@
       </div>
       <%= simple_form_for Quote.new do |f| %>
         <div class="modal-body">
-            <%= f.input :saying %>
-            <%= f.input :author %>
+            <%= f.input :saying, label: "What is the saying you want to add?", placeholder: "Cross promotional. Deal mechanics. Revenue streams. Jargon. Synergy." %>
+            <br />
+            <%= f.input :author, label: "Who is the author?", placeholder: "Liz Lemon"%>
             <br />
         </div>
         <div class="modal-footer">
@@ -76,10 +79,10 @@
     <div class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
           <%= link_to "This isn't enough, I need more", root_path, class:'next-quote' %>
         </div>
-        <div class="col-6 footer-blurb">
+        <div class="col-12 col-sm-6 footer-blurb">
           Created in Seattle, WA by <a href="http://tinalee.getforge.io/"> Tina Lee</a><br />
         </div>
       </div>
