--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,2 +1,12 @@
+<h2 class="catchphrase">
+  <span>SPLURTY / No. <%=@quote.id %></span>
+  Be a manager, Lemon
+</h2>
+<br />
+<br />
 <h1><%= @quote.saying %></h1>
-<h2>- <%= @quote.author %></h2>
+<h2 class="float-right">- <%= @quote.author %></h2>
+<br />
+<br />
+<br />
+<br class="clear" />
